# ChangeLog for app-pda/gtkpod
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-pda/gtkpod/ChangeLog,v 1.51 2006/11/24 03:15:07 tester Exp $

  24 Nov 2006; Olivier Crête <tester@gentoo.org> -gtkpod-0.94.0.ebuild,
  -gtkpod-0.99.4.ebuild:
  Remove old versions

  21 Nov 2006; Christian Faulhammer <opfer@gentoo.org> gtkpod-0.99.8.ebuild:
  stable x86, bug #154832

  18 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gtkpod-0.99.8.ebuild:
  ppc stable, bug #154832

  11 Nov 2006; Olivier Crête <tester@gentoo.org> gtkpod-0.99.8.ebuild:
  Stable on amd64

*gtkpod-0.99.8 (24 Sep 2006)

  24 Sep 2006; Olivier Crête <tester@gentoo.org> +gtkpod-0.99.8.ebuild:
  New version

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gtkpod-0.99.4.ebuild:
  ppc stable

  08 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> gtkpod-0.94.0.ebuild:
  remove optional dep that is no longer in portage

  09 Apr 2006; Olivier Crête <tester@gentoo.org> gtkpod-0.99.4.ebuild:
  Stable on amd64

*gtkpod-0.99.4 (05 Mar 2006)

  05 Mar 2006; Olivier Crête <tester@gentoo.org> -gtkpod-0.99.2.ebuild,
  +gtkpod-0.99.4.ebuild:
  Version bump

  16 Jan 2006; Jason Wever <weeve@gentoo.org> gtkpod-0.99.2.ebuild:
  Added ~sparc keyword as it was dropped in the version dump.

  08 Jan 2006; Joseph Jezak <josejx@gentoo.org> gtkpod-0.99.2.ebuild:
  Marked ~ppc for bug #115265.

  20 Dec 2005; Olivier Crête <tester@gentoo.org> gtkpod-0.94.0.ebuild,
  gtkpod-0.99.2.ebuild:
  Use media-libs/libmp4v2 for libmp4v2

*gtkpod-0.99.2 (14 Dec 2005)

  14 Dec 2005; Olivier Crête <tester@gentoo.org> -gtkpod-0.99.0.ebuild,
  +gtkpod-0.99.2.ebuild:
  Version bump

*gtkpod-0.99.0 (12 Dec 2005)

  12 Dec 2005; Olivier Crête <tester@gentoo.org> -gtkpod-0.88.2.ebuild,
  +gtkpod-0.99.0.ebuild:
  Version bump

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org> gtkpod-0.94.0.ebuild:
  Stable on ppc.
