@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST gtkpod-0.99.8.tar.gz 1074007 RMD160 6ad6305393d66f7a84cc11e475045c8137a20c80 SHA1 023b55bc3cd9efba9fc7aa016ae63538a98cf1cf SHA256 f74afefe31deb11dc235b1d361df6732966fe2ba3eaddfb960c69bf0d161e16d
-EBUILD gtkpod-0.99.8.ebuild 794 RMD160 d506ab80a3d7ad0e45c7041afbd145239aeb7205 SHA1 3fd4e75f5315543d3f2b7c870e6ab62581f15c4a SHA256 324cdbf07608b63ddc2764fe4023096b9b4fc66346ae0a4c0d141dc68b02e49e
-MD5 cb40b126145d88ce622e0d0ded225f59 gtkpod-0.99.8.ebuild 794
-RMD160 d506ab80a3d7ad0e45c7041afbd145239aeb7205 gtkpod-0.99.8.ebuild 794
-SHA256 324cdbf07608b63ddc2764fe4023096b9b4fc66346ae0a4c0d141dc68b02e49e gtkpod-0.99.8.ebuild 794
-MISC ChangeLog 6090 RMD160 1b22dc9ebb77d42dcad0c9515e84e830431f05c6 SHA1 a5009477196e63173e10eb300733f8ddbca01e0b SHA256 c7621cebf93d814a804a6ed4f2e9d24f13623597435734d7ffaf5c833901b1ae
-MD5 5c71d57510c6076c7eded631298c4964 ChangeLog 6090
-RMD160 1b22dc9ebb77d42dcad0c9515e84e830431f05c6 ChangeLog 6090
-SHA256 c7621cebf93d814a804a6ed4f2e9d24f13623597435734d7ffaf5c833901b1ae ChangeLog 6090
+DIST gtkpod-0.99.8_libgpod-0.4.2.diff 2580 RMD160 2e8094b8eba3179279d1b91133df588833e9df3e SHA1 a5090b4597922cc81fc33efd9a3f7e1278b57708 SHA256 a171d985b9f26d89b8583a38dc92f3962ecab9b9f6651236779e5cbea89b2807
+EBUILD gtkpod-0.99.8-r1.ebuild 911 RMD160 42b041c1a96c5e403890e27fccd20f0a770cef4f SHA1 f9a54bd288a7ac67c623c1ec8f625d74853cfab3 SHA256 6433cc40199dc7833a0a01a71e9b3b63e1236943eb3d18594c51cbb12ced2bf7
+MD5 77678e518d2f1258f1850e1c150a9da9 gtkpod-0.99.8-r1.ebuild 911
+RMD160 42b041c1a96c5e403890e27fccd20f0a770cef4f gtkpod-0.99.8-r1.ebuild 911
+SHA256 6433cc40199dc7833a0a01a71e9b3b63e1236943eb3d18594c51cbb12ced2bf7 gtkpod-0.99.8-r1.ebuild 911
+EBUILD gtkpod-0.99.8.ebuild 792 RMD160 e5b7d349a4aa8edf77b93c4981b73eb993502c64 SHA1 42e8260e38fc05e6a4da71b52066242b274f313b SHA256 9af399066b2ea7bd10c4c75e1ae64df604dfcd708b44663b168ac4824a669270
+MD5 4514e6082891a423053838da678d4160 gtkpod-0.99.8.ebuild 792
+RMD160 e5b7d349a4aa8edf77b93c4981b73eb993502c64 gtkpod-0.99.8.ebuild 792
+SHA256 9af399066b2ea7bd10c4c75e1ae64df604dfcd708b44663b168ac4824a669270 gtkpod-0.99.8.ebuild 792
+MISC ChangeLog 6291 RMD160 0d19cb536bb1165efca6ec199f8e177f4d6a07c9 SHA1 972188578dcf61b1a7fdb88d960a5353f74037ed SHA256 4fe277fef6ae2cbfbb736e65310bdd0374cb33dd2f46f6c223b95a7f3478269f
+MD5 81c52bdabb115965f9ababe1f2dd6ead ChangeLog 6291
+RMD160 0d19cb536bb1165efca6ec199f8e177f4d6a07c9 ChangeLog 6291
+SHA256 4fe277fef6ae2cbfbb736e65310bdd0374cb33dd2f46f6c223b95a7f3478269f ChangeLog 6291
 MISC metadata.xml 214 RMD160 2603e0683cb46d84ef65084451adeb1be5f436e5 SHA1 b569ad75e630129aa266984b5963936db724bd14 SHA256 bf19169d8568531809a0b2aebdf2b5736f2bee804449c60ad7be954318262950
 MD5 50b72dc36a1b67c4f473a91cbf985f30 metadata.xml 214
 RMD160 2603e0683cb46d84ef65084451adeb1be5f436e5 metadata.xml 214
@@ -17,10 +22,13 @@ SHA256 bf19169d8568531809a0b2aebdf2b5736f2bee804449c60ad7be954318262950 metadata
 MD5 29f277da87b3260613d681d085943d53 files/digest-gtkpod-0.99.8 244
 RMD160 1489d280d6154e38658c33a92d5731feb152f7a3 files/digest-gtkpod-0.99.8 244
 SHA256 439953872bdf1f1b693d0f3ff961a919501df27f378dd86457fb92d7c0cf8f88 files/digest-gtkpod-0.99.8 244
+MD5 3f62fb81ce28774782a6ae9db9368653 files/digest-gtkpod-0.99.8-r1 515
+RMD160 4372b6b5d34b8f8a3e4edb5a93a5bcafa4fdb462 files/digest-gtkpod-0.99.8-r1 515
+SHA256 d7f1333c77452df99b7990de3a72aac93f91aa2721d52bcc93182daa13cbf5ec files/digest-gtkpod-0.99.8-r1 515
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFZmPbmOfEJZHYOKcRAmo3AJ9Ujvr9iMwEia4QU6a329h0uZoZGACg4cu4
-qGxTSmkUccpb7feVpN2hjUw=
-=zV60
+iD8DBQFFr9Zg+IXOQtHLm/gRAjKsAJ4ofnhBszT+ntskHQUM8ceKJfMAUwCfe/Xk
+OC85Y4u3baN5XJXVX0Hmllo=
+=3xgg
 -----END PGP SIGNATURE-----
