@@ -1,0 +1,6 @@
+MD5 f04b67605204d9076d30d83b72b78463 gtkpod-0.99.8.tar.gz 1074007
+RMD160 6ad6305393d66f7a84cc11e475045c8137a20c80 gtkpod-0.99.8.tar.gz 1074007
+SHA256 f74afefe31deb11dc235b1d361df6732966fe2ba3eaddfb960c69bf0d161e16d gtkpod-0.99.8.tar.gz 1074007
+MD5 73309b989646491a7d7391fd14b9585f gtkpod-0.99.8_libgpod-0.4.2.diff 2580
+RMD160 2e8094b8eba3179279d1b91133df588833e9df3e gtkpod-0.99.8_libgpod-0.4.2.diff 2580
+SHA256 a171d985b9f26d89b8583a38dc92f3962ecab9b9f6651236779e5cbea89b2807 gtkpod-0.99.8_libgpod-0.4.2.diff 2580
