@@ -1,6 +1,12 @@
 # ChangeLog for app-pda/gtkpod
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gtkpod/ChangeLog,v 1.51 2006/11/24 03:15:07 tester Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gtkpod/ChangeLog,v 1.52 2007/01/18 20:19:24 tester Exp $
+
+*gtkpod-0.99.8-r1 (18 Jan 2007)
+
+  18 Jan 2007; Olivier Crête <tester@gentoo.org> gtkpod-0.99.8.ebuild,
+  +gtkpod-0.99.8-r1.ebuild:
+  New version to support libgpod 0.4.2, limit old version to 0.4.0
 
   24 Nov 2006; Olivier Crête <tester@gentoo.org> -gtkpod-0.94.0.ebuild,
   -gtkpod-0.99.4.ebuild:
